2007-11-10  Richard Dale  <rdale@foton.es>

	* Fix regressions caused by attempt to tidy up the skipped methods code
	  generation

2007-10-18  Richard Dale  <rdale@foton.es>

	* Simply the code to special case which classes and methods are to be skipped
	  when generating the bindings. Regenerate to add a few missing methods

2007-08-11  Arno Rehn  <arno@arnorehn.de>

	* If a marshaller is given a zero pointer, return zero and don't free
	  the GCHandle.
	* Added implicit type conversions for QUrl.
	* Fixed generation of ToolBarArea and DockWidgetArea related stuff in
	  uics.
	* Improved Qyoto.GetPrimitiveString()

2007-08-09  Richard Dale  <rdale@foton.es>

	* Added some missing implicit type conversions to better match 
	  the C++ api

2007-07-15  Arno Rehn  <arno@arnorehn.de>

	* Moved Init_qyoto() from the Q(Core)Application constructor to the
	  static SmokeInvocation constructor. It's now called before anything
	  else, even if you hadn't created a Q(Core)Application before.

2007-06-26  Richard Dale  <rdale@foton.es>

	* Fixed a bug parsing Q_PROPERTIES which messed up the code generation
	* Code for nested classes is now generated

2007-06-25  Arno Rehn  <arno@arnorehn.de>

	* Made a seperate assembly out of the QScintilla namespace.

2007-06-19  Richard Dale  <rdale@foton.es>

	* Moved the QScintilla classes to a QScintilla namespace instead of 
	  Qyoto.QScintilla as Qyoto should really just contain the Qt classes
	* #ifdef'd the code to register a callback for events so the code
	  compiles with Qt 4.2.x

2007-06-23  Arno Rehn  <arno@arnorehn.de>

	* Added classes for QScintilla2
	* Added a marshaller for QList<QWizard::WizardButton>
	* Added FindSmokeQt.cmake (might be useful when someone wants to create a standalone
	  package)
	* Added a LINK_DIRECTORIES rule in CMakeLists.txt

2007-06-21  Arno Rehn  <arno@arnorehn.de>

	* When the assembly is installed, a symlink is created in the "2.0" directory, so